Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18186

WARNING: CPU: 4 PID: 448333 at mm/page_alloc.c:4663 __alloc_pages_noprof+0x3a7/0x4e0

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [22627.561944] Lustre: DEBUG MARKER: == sanity test 133f: Check reads/writes of client lustre proc files with bad area io ========================================================== 21:50:21 (1724943021)
      [22627.644342] Lustre: DEBUG MARKER: /sbin/lctl get_param -n version 2>/dev/null
      [22637.578668] Lustre: 448333:0:(libcfs_string.c:162:cfs_str2mask()) unknown mask '\x03'.
                     mask usage: [+|-]<all|type> ...
      [22637.589683] ------------[ cut here ]------------
      [22637.599786] WARNING: CPU: 4 PID: 448333 at mm/page_alloc.c:4663 __alloc_pages_noprof+0x3a7/0x4e0
      [22637.607529] Modules linked in: loop(E) tls(E) lustre(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) sunrpc(E) libcfs(OE) rfkill(E) intel_rapl_msr(E) intel_rapl_common(E) intel_uncore_frequency_common(E) intel_pmc_core(E) intel_vsec(E) pmt_telemetry(E) pmt_class(E) snd_hda_codec_generic(E) kvm_intel(E) snd_hda_intel(E) snd_intel_dspcfg(E) snd_hda_codec(E) snd_hda_core(E) kvm(E) snd_hwdep(E) snd_seq(E) snd_seq_device(E) iTCO_wdt(E) intel_pmc_bxt(E) rapl(E) snd_pcm(E) iTCO_vendor_support(E) qxl(E) snd_timer(E) i2c_i801(E) i2c_mux(E) drm_ttm_helper(E) ttm(E) snd(E) pcspkr(E) i2c_smbus(E) soundcore(E) drm_kms_helper(E) virtio_balloon(E) joydev(E) lpc_ich(E) drm(E) fuse(E) ext4(E) mbcache(E) jbd2(E) sr_mod(E) cdrom(E) sg(E) crct10dif_pclmul(E) crc32_pclmul(E) crc32c_intel(E) polyval_clmulni(E) ahci(E) polyval_generic(E) libahci(E) libata(E) ghash_clmulni_intel(E) virtio_blk(E) virtio_console(E) virtio_net(E) net_failover(E) failover(E)
      [22637.607892]  dimlib(E) serio_raw(E) [last unloaded: obd_test(OE)]
      [22637.656302] CPU: 4 PID: 448333 Comm: badarea_io Kdump: loaded Tainted: G        W  OE      6.10.6-1.ldiskfs.el9.x86_64 #1
      [22637.661183] Hardware name: QEMU Standard PC (Q35 + ICH9, 2009), BIOS 1.15.0-1 04/01/2014
      [22637.666019] RIP: 0010:__alloc_pages_noprof+0x3a7/0x4e0
      [22637.670807] Code: ff ff 00 0f 84 2e fe ff ff 80 ce 01 e9 26 fe ff ff 83 fe 0a 0f 86 3a fd ff ff 80 3d 08 94 f7 03 00 75 09 c6 05 ff 93 f7 03 01 <0f> 0b 45 31 f6 e9 8e fe ff ff e8 5a 6a 9a ff 84 c0 0f 85 81 fe ff
      [22637.680386] RSP: 0018:ffffc9000306fa30 EFLAGS: 00010246
      [22637.685160] RAX: 0000000000000000 RBX: 1ffff9200060df47 RCX: 0000000000000000
      [22637.689897] RDX: 0000000000000000 RSI: 0000000000000013 RDI: 0000000000000000
      [22637.694542] RBP: 0000000000040cc0 R08: ffffc9000306feb0 R09: fffff5200060df91
      [22637.699096] R10: ffffc9000306fc00 R11: ffff8881013da000 R12: 0000000000000000
      [22637.703610] R13: 0000000000000013 R14: 0000000000000013 R15: 0000000000000000
      [22637.708095] FS:  00007fe611cd2740(0000) GS:ffff88842ce00000(0000) knlGS:0000000000000000
      [22637.712511] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [22637.716883] CR2: 00007fff4fd35000 CR3: 000000039bae8004 CR4: 0000000000370ef0
      [22637.721187] Call Trace:
      [22637.725276]  <TASK>
      [22637.729244]  ? __warn+0xc8/0x2d0
      [22637.733158]  ? __alloc_pages_noprof+0x3a7/0x4e0
      [22637.736789]  ? report_bug+0x326/0x3c0
      [22637.738829]  ? handle_bug+0x42/0x80
      [22637.740809]  ? exc_invalid_op+0x14/0x50
      [22637.742757]  ? asm_exc_invalid_op+0x16/0x20
      [22637.744722]  ? __alloc_pages_noprof+0x3a7/0x4e0
      [22637.746653]  ? __pfx___alloc_pages_noprof+0x10/0x10
      [22637.748530]  ? _raw_spin_unlock_irqrestore+0x3d/0x60
      [22637.750383]  ? __free_pages_ok+0x31c/0xab0
      [22637.752187]  __kmalloc_large_node+0x84/0x150
      [22637.753944]  kmalloc_node_track_caller_noprof+0x40f/0x4f0
      [22637.755690]  ? __pfx___folio_put+0x10/0x10
      [22637.757399]  ? proc_dobitmasks+0x15f/0x2b0 [libcfs]
      [22637.759081]  ? trace_irq_enable.constprop.0+0xd2/0x110
      [22637.760803]  ? memdup_user_nul+0x27/0xd0
      [22637.762398]  memdup_user_nul+0x27/0xd0
      [22637.763956]  proc_dobitmasks+0x15f/0x2b0 [libcfs]
      [22637.765573]  ? update_load_avg+0x248/0x21a0
      [22637.767087]  ? update_load_avg+0x248/0x21a0
      [22637.768608]  lnet_debugfs_write+0xec/0x1b0 [libcfs]
      [22637.770149]  ? __pfx_lnet_debugfs_write+0x10/0x10 [libcfs]
      [22637.771651]  full_proxy_write+0xff/0x190
      [22637.773116]  vfs_write+0x20c/0xf60
      [22637.774478]  ? lock_acquire+0x1ca/0x250
      [22637.775786]  ? __might_fault+0xbf/0x170
      [22637.777049]  ? __pfx_vfs_write+0x10/0x10
      [22637.778308]  ? __might_fault+0x117/0x170
      [22637.779494]  ? rcu_is_watching+0x11/0xb0
      [22637.780707]  ? lock_release+0x1ec/0x270
      [22637.781837]  ? rseq_ip_fixup+0x310/0x4e0
      [22637.782921]  ? __pfx___schedule+0x10/0x10
      [22637.783970]  ? __fget_light+0x53/0x1e0
      [22637.784980]  ksys_write+0xf1/0x1d0
      [22637.785967]  ? __pfx_ksys_write+0x10/0x10
      [22637.786913]  ? seqcount_lockdep_reader_access.constprop.0+0x82/0x90
      [22637.787860]  ? ktime_get_coarse_real_ts64+0x3d/0xc0
      [22637.788772]  ? rcu_is_watching+0x11/0xb0
      [22637.789670]  do_syscall_64+0x73/0x190
      [22637.790537]  entry_SYSCALL_64_after_hwframe+0x76/0x7e
      [22637.791447] RIP: 0033:0x7fe611afda57
      [22637.792363] Code: 0f 00 f7 d8 64 89 02 48 c7 c0 ff ff ff ff eb b7 0f 1f 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 01 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 51 c3 48 83 ec 28 48 89 54 24 18 48 89 74 24
      [22637.794392] RSP: 002b:00007fff4fd30f88 EFLAGS: 00000246 ORIG_RAX: 0000000000000001
      [22637.795487] RAX: ffffffffffffffda RBX: 00007fff4fd310c8 RCX: 00007fe611afda57
      [22637.796566] RDX: 0000000060000000 RSI: 00007fff4fd30f9c RDI: 0000000000000003
      [22637.797574] RBP: 0000000000000002 R08: 00007fe611bfbf10 R09: 00007fe611cefc20
      [22637.798538] R10: 00007fe611a070e0 R11: 0000000000000246 R12: 00007fff4fd310c8
      [22637.799575] R13: 0000000000401070 R14: 0000000000403e08 R15: 00007fe611d21000
      [22637.800592]  </TASK>
      [22637.801586] irq event stamp: 0
      [22637.802653] hardirqs last  enabled at (0): [<0000000000000000>] 0x0
      [22637.803758] hardirqs last disabled at (0): [<ffffffff91445510>] copy_process+0x16e0/0x5550
      [22637.804842] softirqs last  enabled at (0): [<ffffffff91445560>] copy_process+0x1730/0x5550
      [22637.805864] softirqs last disabled at (0): [<0000000000000000>] 0x0
      [22637.806875] ---[ end trace 0000000000000000 ]---
      [22637.829565] Lustre: DEBUG MARKER: \x03
      [22637.831684] Lustre: DEBUG MARKER: \x03
      [22661.936810] Lustre: lustre-MDT0000-mdc-ffff88838b2cc000: Connection to lustre-MDT0000 (at 192.168.122.56@tcp) was lost; in progress operations using this service will wait for recovery to complete
      
      

      Attachments

        Activity

          People

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: