LU-18186 libcfs: avoid kmalloc order > MAX_PAGE_ORDER

WARNING: CPU: 4 PID: 448333 at mm/page_alloc.c:4663
    __alloc_pages_noprof+0x3a7/0x4e0

libcfs calls memdup_user_nul() which uses kmalloc() which can
trigger the above warning.

Limit these excessive allocations a reasonable minimum.

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: Ide49aa3870cadc43c520f29b0a942c8f9798d053
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56215
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>